# wahl_o_mat_2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  module_definition.js  pyproject.toml  wahl-o-mat-2024.csv
.github/workflows/: docs.yml
analysis/: Chart.html  chart.json  theme.json  vis.ipynb
tests/: __init__.py  test_true.py
wahl_o_mat_2024/: analyze.py  parse.py
wahl_o_mat_2024/utils/: logger.py
