[tool.poetry]
name = "wahl_o_mat_2024"
version = "0.1.0"
description = ""
authors = ["Thomas Camminady <0milieux_member@icloud.com>"]
readme = "README.md"
repository = "https://github.com/thomascamminady/wahl_o_mat_2024"
homepage = "https://github.com/thomascamminady/wahl_o_mat_2024"
documentation = "https://thomascamminady.github.io/wahl_o_mat_2024"


[tool.poetry.dependencies]
python = ">=3.10,<3.12"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
isort = "^5.13.2"
pyclean = "^3.0.0"
pre-commit = "^3.7.0"
ipykernel = "^6.29.4"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
rich = "^13.7.1"
regex = "^2024.5.10"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = [
    "D100",
    "D101",
    "D103",
    "D104",
    "D401",
    "E501",
]
line-length = 80
select = [
    "B",
    "B9",
    "C",
    "D",
    "E",
    "F",
    "N",
    "S",
    "W",
    "I001",
]

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
"**/__init__.py" = [
    "D200",
    "D400",
]

[tool.pylint.MASTER]
disable=[
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
]

[tool.pyright]
exclude = [
    ".venv/*",
    ".mypy_cache/*",
    ".pytest_cache/*",
    ".ruff_cache/*",
    ".ipynb_checkpoints/*",
    ".git/*",
    ".github/*",
    "**/__pycache__/*",
    "**/*.pyc",
]
